--- a/web/src/common/styles/theme-dark.css
+++ b/web/src/common/styles/theme-dark.css
@@ -17,6 +17,20 @@
     --ak-scrollbar-thumb-background-color: hsl(0 0% 42%);
 }
 
+/**
+ * Our reversal of Patternfly's light variables requires us to set the colors
+ * back to their defaults when in dark mode.
+ */
+.pf-m-dark {
+    --pf-global--Color--100: var(--pf-global--Color--light-100);
+    --pf-global--Color--200: var(--pf-global--Color--light-200);
+    --pf-global--BorderColor--100: var(--pf-global--BorderColor--light-100);
+    --pf-global--primary-color--100: var(--pf-global--primary-color--light-100);
+    --pf-global--link--Color: var(--pf-global--link--Color--light);
+    --pf-global--link--Color--hover: var(--pf-global--link--Color--light);
+    --pf-global--BackgroundColor--100: var(--pf-global--BackgroundColor--dark-100);
+}
+
 /* #endregion */
 
 .pf-c-radio {
@@ -26,10 +40,6 @@
 /* Global page background colour */
 .pf-c-page {
     --pf-c-page--BackgroundColor: var(--ak-dark-background);
-}
-
-.pf-c-drawer__content {
-    --pf-c-drawer__content--BackgroundColor: var(--ak-dark-background);
 }
 
 .pf-c-title {
@@ -141,8 +151,7 @@ fieldset {
 /* #region Page layout */
 
 /**
- * Our reversal of the page header on the light theme requires us to set the colors
- * back to their PatternFly defaults.
+ * cf. Color reversal.
  */
 .pf-c-page__header {
     --pf-global--Color--100: var(--pf-global--Color--light-100);
@@ -353,19 +362,15 @@ select.pf-c-form-control {
 
 /* #region Flows */
 
-.pf-c-login__main {
-    --pf-c-login__main--BackgroundColor: var(--ak-dark-background);
+.pf-c-login {
+    --pf-c-login__main--BackgroundColor: var(--pf-global--BackgroundColor--100);
 }
 
-.pf-c-login__main-body,
-.pf-c-login__main-header,
-.pf-c-login__main-header-desc {
-    color: var(--ak-dark-foreground);
-}
-
-.pf-c-login__main-footer-links-item img,
-.pf-c-login__main-footer-links-item .fas {
-    filter: invert(1);
+@media (min-width: 35rem) {
+    .pf-c-login__main-footer-links-item img,
+    .pf-c-login__main-footer-links-item .fas {
+        filter: invert(1);
+    }
 }
 
 .pf-c-login__main-footer-band {
